# odoo-fast-mcp

./: .gitignore  check.py  config.json  pyproject.toml
src/: server.py
